--- a/product_listing/product_listing.css
+++ b/product_listing/product_listing.css
@@ -1,5 +1,7 @@
 
-
+:root {
+    --filter-border-color: rgb(212, 211, 211);
+}
 
 .body-container {
     grid-template-areas:
@@ -8,6 +10,7 @@
     "footer footer" ;
     grid-template-rows: 6rem auto auto;
     grid-template-columns: 1fr 3fr;
+  
 }
 
 .sidebar {
@@ -26,7 +29,8 @@
     width: 90%;
     padding: 1rem;
     margin: 1rem 0 1rem 1rem;
-    border: 1px solid rgb(212, 211, 211);
+    border: 1px solid var(--filter-border-color);
+   
   
 }
 
@@ -54,4 +58,17 @@
 .category-wrapper  {
     justify-content: flex-start;
     align-items: flex-start;
+}
+
+@media only screen and (max-width: 500px) {
+    .body-container {
+        grid-template-columns: 0fr 3fr;
+    }
+
+    .product-filter-container {
+        position: fixed;
+        z-index: 2;
+        width: 10rem;
+        display: none;
+    }
 }
