--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ table {
     display: flex;
     height: 2rem;
     flex-wrap: wrap;
-    gap: 1.2rem;
+    gap: 2rem;
     align-items: center;
     margin-right: 1rem;
 }
@@ -148,7 +148,7 @@ table {
     display: flex;
     align-items: center;
     height: 2rem;
-    gap: 5px;
+    column-gap: 8px;
 }
 
 .item--link {
